--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 
   <!-- Second video (Moana) -->
   <video controls>
-    <source src="Moana.mp4" type="video/webm">
+    <source src="Moana" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
