--- a/Index.html
+++ b/Index.html
@@ -30,7 +30,7 @@
 
   <!-- Second video (moana) -->
   <video controls>
-    <source src="moana" type="video/mp4">
+    <source src="moana" type="video/webm">
     Your browser does not support the video tag.
   </video>
 
