--- a/Index.html
+++ b/Index.html
@@ -28,9 +28,9 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Second video (moana.mp4) -->
+  <!-- Second video (moana) -->
   <video controls>
-    <source src="moana.mp4" type="video/webm">
+    <source src="moana" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
