--- a/Index.html
+++ b/Index.html
@@ -28,39 +28,34 @@
     Your browser does not support the video tag.
   </video>
 
-  <!-- Second video (moana) -->
-  <video controls>
-    <source src="moana" type="video/mp4">
+  <!-- Second video (Moana, split into parts) -->
+  <video id="moanaVideo" controls>
+    <source src="Moana(1).mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Third video (Theparisunder) -->
+  <!-- Third video (The Paris Under) -->
   <video controls>
     <source src="Theparisunder.mp4" type="video/webm">
     Your browser does not support the video tag.
   </video>
 
-  <!-- Scroll behavior JS -->
   <script>
-    const videos = document.querySelectorAll('video');
-    let currentVideoIndex = 0;
+    const moanaVideo = document.getElementById('moanaVideo');
+    const moanaSegments = [
+      'Moana(1).mp4', 'Moana(2).mp4', 'Moana(3).mp4', 'Moana(4).mp4',
+      'Moana(5).mp4', 'Moana(6).mp4', 'Moana(7).mp4', 'Moana(8).mp4',
+      'Moana(9).mp4', 'Moana(10).mp4', 'Moana(11).mp4', 'Moana(12).mp4',
+      'Moana(13).mp4', 'Moana(14).mp4', 'Moana(15).mp4', 'Moana(16).mp4',
+      'Moana(17).mp4'
+    ];
+    let currentSegment = 0;
 
-    // Scroll event to change videos
-    window.addEventListener('scroll', () => {
-      const scrollPosition = window.scrollY;
-      const windowHeight = window.innerHeight;
-
-      for (let i = 0; i < videos.length; i++) {
-        const videoElement = videos[i];
-        const videoTop = videoElement.offsetTop;
-        const videoHeight = videoElement.offsetHeight;
-
-        if (scrollPosition >= videoTop - windowHeight / 2 && scrollPosition < videoTop + videoHeight) {
-          if (i !== currentVideoIndex) {
-            videoElement.play();
-            currentVideoIndex = i;
-          }
-        }
+    moanaVideo.addEventListener('ended', () => {
+      currentSegment++;
+      if (currentSegment < moanaSegments.length) {
+        moanaVideo.src = moanaSegments[currentSegment];
+        moanaVideo.play();
       }
     });
   </script>
