--- a/Index.html
+++ b/Index.html
@@ -21,16 +21,16 @@
     .buttons-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 5px; /* Smaller gap to save space */
       justify-content: center;
     }
     .buttons-container button {
-      padding: 10px 15px;
+      padding: 5px 10px; /* Smaller padding for compact buttons */
       border: none;
       border-radius: 5px;
       background-color: #007bff;
       color: white;
-      font-size: 14px;
+      font-size: 12px; /* Smaller font size */
       cursor: pointer;
     }
     .buttons-container button:hover {
