--- a/Index.html
+++ b/Index.html
@@ -21,16 +21,17 @@
     .buttons-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 5px; /* Smaller gap to save space */
+      gap: 10px;
       justify-content: center;
+      margin-bottom: 20px; /* Add margin to create space between buttons and the next video */
     }
     .buttons-container button {
-      padding: 5px 10px; /* Smaller padding for compact buttons */
+      padding: 8px 12px; /* Slightly smaller buttons for a compact layout */
       border: none;
       border-radius: 5px;
       background-color: #007bff;
       color: white;
-      font-size: 12px; /* Smaller font size */
+      font-size: 12px; /* Reduced font size for compactness */
       cursor: pointer;
     }
     .buttons-container button:hover {
