--- a/Index.html
+++ b/Index.html
@@ -20,7 +20,7 @@
       position: relative;
     }
     video::before {
-      content: attr(data-title);
+      content: attr(data-title); /* Display the video title */
       position: absolute;
       top: 10px;
       left: 10px;
