--- a/Index.html
+++ b/Index.html
@@ -54,13 +54,13 @@
 </head>
 <body>
   <!-- First video (Red One) -->
-  <video controls data-title="Red One (New)">
+  <video controls data-title="Red One">
     <source src="Red_One_2024[_75186].mkv" type="video/webm">
     Your browser does not support the video tag.
   </video>
 
   <!-- Second video (Moana, split into parts) -->
-  <video id="moanaVideo" controls data-title="Moana 2 (New)">
+  <video id="moanaVideo" controls data-title="Moana 2">
     <source src="Moana(1).mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
@@ -69,7 +69,7 @@
   <div class="buttons-container" id="moanaButtons"></div>
 
   <!-- Third video (The Paris Under) -->
-  <video controls data-title="The Paris Under (New)">
+  <video controls data-title="The Paris Under">
     <source src="Theparisunder.mp4" type="video/webm">
     Your browser does not support the video tag.
   </video>
