--- a/Index.html
+++ b/Index.html
@@ -24,12 +24,13 @@
       position: absolute;
       top: 10px;
       left: 10px;
-      background-color: rgba(0, 0, 0, 0.5);
+      background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
       color: white;
       padding: 5px;
       border-radius: 5px;
       font-size: 14px;
       font-weight: bold;
+      z-index: 1; /* Ensure it's above the video */
     }
     .buttons-container {
       display: flex;
