--- a/Index.html
+++ b/Index.html
@@ -42,6 +42,9 @@
       font-weight: bold;
       margin-bottom: 10px;
     }
+    .red-one-buttons-container {
+      width: 400px; /* Fixed width for 4 buttons per line */
+    }
   </style>
 </head>
 <body>
@@ -56,7 +59,7 @@
   </div>
 
   <!-- Buttons for switching between The Red One video parts -->
-  <div class="buttons-container" id="redOneButtons"></div>
+  <div class="buttons-container red-one-buttons-container" id="redOneButtons"></div>
 
   <!-- Second video (Moana, split into parts) -->
   <div>
