--- a/Index.html
+++ b/Index.html
@@ -53,7 +53,7 @@
   <div>
     <div class="video-title">The Red One</div>
     <video id="redoneVideo" controls>
-      <source src="theredone(1).mp4" type="video/mp4">
+      <source src="theredone(1).mkv" type="video/webm">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -86,10 +86,10 @@
     // For the first video (The Red One)
     const redoneVideo = document.getElementById('redoneVideo');
     const redoneSegments = [
-      'theredone(1).mp4', 'theredone(2).mp4', 'theredone(3).mp4', 'theredone(4).mp4',
-      'theredone(5).mp4', 'theredone(6).mp4', 'theredone(7).mp4', 'theredone(8).mp4',
-      'theredone(9).mp4', 'theredone(10).mp4', 'theredone(11).mp4', 'theredone(12).mp4',
-      'theredone(13).mp4', 'theredone(14).mp4', 'theredone(15).mp4', 'theredone(16).mp4'
+      'theredone(1).mkv', 'theredone(2).mkv', 'theredone(3).mkv', 'theredone(4).mkv',
+      'theredone(5).mkv', 'theredone(6).mkv', 'theredone(7).mkv', 'theredone(8).mkv',
+      'theredone(9).mkv', 'theredone(10).mkv', 'theredone(11).mkv', 'theredone(12).mkv',
+      'theredone(13).mkv', 'theredone(14).mkv', 'theredone(15).mkv', 'theredone(16).mkv'
     ];
 
     const redoneButtonsContainer = document.getElementById('redoneButtons');
