--- a/Index.html
+++ b/Index.html
@@ -31,7 +31,7 @@
   <div>
     <div class="video-title">The Red One</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?dl=1" type="video/mp4">
+      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?raw=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -40,7 +40,7 @@
   <div>
     <div class="video-title">Moana 2</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?dl=1" type="video/mp4">
+      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?raw=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -49,7 +49,7 @@
   <div>
     <div class="video-title">The Paris Under</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mkv?dl=1" type="video/webm">
+      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mkv?raw=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
