--- a/Index.html
+++ b/Index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Simple Video Page</title>
+  <title>Video Page</title>
   <style>
     body {
       background-color: white;
@@ -27,29 +27,11 @@
 </head>
 <body>
 
-  <!-- First video (The Red One) -->
+  <!-- The full video (The Red One - Full) -->
   <div>
-    <div class="video-title">The Red One</div>
+    <div class="video-title">The Red One - Full</div>
     <video controls>
       <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?raw=1" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-
-  <!-- Second video (Moana 2) -->
-  <div>
-    <div class="video-title">Moana 2</div>
-    <video controls>
-      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?raw=1" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-  </div>
-
-  <!-- Third video (The Paris Under) -->
-  <div>
-    <div class="video-title">The Paris Under</div>
-    <video controls>
-      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mkv?raw=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
