--- a/Index.html
+++ b/Index.html
@@ -18,38 +18,69 @@
       max-height: 90%;
       margin-bottom: 20px;
     }
+    .buttons-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-bottom: 20px;
+    }
+    .buttons-container button {
+      padding: 8px 12px;
+      border: none;
+      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      font-size: 12px;
+      cursor: pointer;
+    }
+    .buttons-container button:hover {
+      background-color: #0056b3;
+    }
     .video-title {
       font-size: 18px;
       font-weight: bold;
       margin-bottom: 10px;
     }
+    .redone-buttons-container {
+      width: 400px; /* Fixed width for 4 buttons per line */
+    }
+    .hidden {
+      display: none;
+    }
   </style>
 </head>
 <body>
 
-  <!-- First video (Hidden - The Red One) -->
-  <div style="display: none;">
-    <div class="video-title">The Red One (Hidden)</div>
-    <video controls>
-      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?raw=1" type="video/mp4">
+  <!-- First video (The Red One) -->
+  <div class="hidden">
+    <div class="video-title">The Red One</div>
+    <video id="redoneVideo" controls>
+      <source src="theredone (1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
-  <!-- Second video (Hidden - Moana 2) -->
-  <div style="display: none;">
-    <div class="video-title">Moana 2 (Hidden)</div>
-    <video controls>
-      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?raw=1" type="video/mp4">
+  <!-- Buttons for switching between The Red One video parts -->
+  <div class="buttons-container redone-buttons-container hidden" id="redoneButtons"></div>
+
+  <!-- Second video (Moana, split into parts) -->
+  <div class="hidden">
+    <div class="video-title">Moana 2</div>
+    <video id="moanaVideo" controls>
+      <source src="Moana(1).mp4" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
-  <!-- Third video (Hidden - The Paris Under) -->
-  <div style="display: none;">
-    <div class="video-title">The Paris Under (Hidden)</div>
+  <!-- Buttons for switching between Moana video parts -->
+  <div class="buttons-container hidden" id="moanaButtons"></div>
+
+  <!-- Third video (The Paris Under) -->
+  <div class="hidden">
+    <div class="video-title">The Paris Under</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mkv?raw=1" type="video/mp4">
+      <source src="Theparisunder.mp4" type="video/webm">
       Your browser does not support the video tag.
     </video>
   </div>
@@ -58,28 +89,94 @@
   <div>
     <div class="video-title">The Red One - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?raw=1" type="video/mp4">
+      <source src="https://www.dropbox.com/scl/fi/ygwlg742cw4lj15rzyrci/theredonemovie.mp4?rlkey=ftgy82av3zzf8mzeog5yyvzm2&dl=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
   <!-- Fifth video (Moana 2) -->
   <div>
-    <div class="video-title">Moana 2</div>
+    <div class="video-title">Moana 2 - Full</div>
     <video controls>
-      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?raw=1" type="video/mp4">
+      <source src="https://www.dropbox.com/scl/fi/0kw6n7jkfqicgm94hwkk9/Moana-2_1080P_480P.mp4?rlkey=87jrwv5fjf5l3dyu0uridgq9x&dl=0" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
   <!-- Sixth video (The Paris Under) -->
   <div>
-    <div class="video-title">The Paris Under</div>
+    <div class="video-title">The Paris Under - Full</div>
     <video controls>
       <source src="https://www.dropbox.com/scl/fi/9ku33jabzb7tilyqn78th/Under.Paris.2024.540p.x265.AAC.-9jaRocks.Com.mkv?raw=1" type="video/mp4">
       Your browser does not support the video tag.
     </video>
   </div>
 
+  <script>
+    // For the first video (The Red One)
+    const redoneVideo = document.getElementById('redoneVideo');
+    const redoneSegments = [
+      'theredone (1).mp4', 'theredone (2).mp4', 'theredone (3).mp4', 'theredone (4).mp4',
+      'theredone (5).mp4', 'theredone (6).mp4', 'theredone (7).mp4', 'theredone (8).mp4',
+      'theredone (9).mp4', 'theredone (10).mp4', 'theredone (11).mp4', 'theredone (12).mp4',
+      'theredone (13).mp4', 'theredone (14).mp4', 'theredone (15).mp4', 'theredone (16).mp4'
+    ];
+
+    const redoneButtonsContainer = document.getElementById('redoneButtons');
+
+    // Create buttons dynamically for The Red One segments
+    redoneSegments.forEach((segment, index) => {
+      const button = document.createElement('button');
+      button.textContent = `Part ${index + 1}`;
+      button.addEventListener('click', () => {
+        redoneVideo.src = segment;
+        redoneVideo.play();
+      });
+      redoneButtonsContainer.appendChild(button);
+    });
+
+    let currentRedoneSegment = 0;
+
+    redoneVideo.addEventListener('ended', () => {
+      currentRedoneSegment++;
+      if (currentRedoneSegment < redoneSegments.length) {
+        redoneVideo.src = redoneSegments[currentRedoneSegment];
+        redoneVideo.play();
+      }
+    });
+
+    // For the second video (Moana)
+    const moanaVideo = document.getElementById('moanaVideo');
+    const moanaSegments = [
+      'Moana(1).mp4', 'Moana(2).mp4', 'Moana(3).mp4', 'Moana(4).mp4',
+      'Moana(5).mp4', 'Moana(6).mp4', 'Moana(7).mp4', 'Moana(8).mp4',
+      'Moana(9).mp4', 'Moana(10).mp4', 'Moana(11).mp4', 'Moana(12).mp4',
+      'Moana(13).mp4', 'Moana(14).mp4', 'Moana(15).mp4', 'Moana(16).mp4',
+      'Moana(17).mp4'
+    ];
+
+    const moanaButtonsContainer = document.getElementById('moanaButtons');
+
+    // Create buttons dynamically for Moana segments
+    moanaSegments.forEach((segment, index) => {
+      const button = document.createElement('button');
+      button.textContent = `Part ${index + 1}`;
+      button.addEventListener('click', () => {
+        moanaVideo.src = segment;
+        moanaVideo.play();
+      });
+      moanaButtonsContainer.appendChild(button);
+    });
+
+    let currentMoanaSegment = 0;
+
+    moanaVideo.addEventListener('ended', () => {
+      currentMoanaSegment++;
+      if (currentMoanaSegment < moanaSegments.length) {
+        moanaVideo.src = moanaSegments[currentMoanaSegment];
+        moanaVideo.play();
+      }
+    });
+  </script>
 </body>
 </html>
