--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
     video {
       max-width: 90%;
       max-height: 90%;
-      margin-bottom: 20px;
+      margin-bottom: 30px; /* Added extra space */
     }
     .buttons-container {
       display: flex;
