--- a/Index.html
+++ b/Index.html
@@ -6,41 +6,52 @@
   <title>Simple Video Page</title>
   <style>
     body {
-      background-color: white;
+      background-image: url('https://source.unsplash.com/1600x900/?movie,cinema'); /* Dynamic background image */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: 0;
+      color: white;
+      font-family: 'Arial', sans-serif;
     }
     video {
-      max-width: 90%;
-      max-height: 90%;
-      margin-bottom: 30px; /* Added extra space */
+      max-width: 80%;
+      max-height: 80%;
+      margin-bottom: 30px; /* Increased space between videos */
+      border: 5px solid rgba(255, 255, 255, 0.8); /* Add border for video frames */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+      border-radius: 10px; /* Rounded corners */
     }
     .buttons-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 10px;
+      gap: 15px; /* More spacing between buttons */
       justify-content: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
     .buttons-container button {
-      padding: 8px 12px;
+      padding: 12px 18px;
       border: none;
       border-radius: 5px;
-      background-color: #007bff;
+      background-color: rgba(0, 123, 255, 0.8); /* Slightly darker blue */
       color: white;
-      font-size: 12px;
+      font-size: 14px;
       cursor: pointer;
+      transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     }
     .buttons-container button:hover {
-      background-color: #0056b3;
+      background-color: rgba(0, 85, 180, 0.9); /* Darker blue on hover */
+      transform: scale(1.05); /* Slight scale effect for hover */
     }
     .video-title {
-      font-size: 18px;
+      font-size: 22px;
       font-weight: bold;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
+      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Shadow to make titles pop */
     }
     .redone-buttons-container {
       width: 400px; /* Fixed width for 4 buttons per line */
