--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,8 @@
       border: 5px solid rgba(255, 255, 255, 0.8); /* Add border for video frames */
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
       border-radius: 10px; /* Rounded corners */
+      display: block;
+      width: 100%; /* Ensure full width of the container */
     }
     .buttons-container {
       display: flex;
@@ -56,8 +58,9 @@
     .redone-buttons-container {
       width: 400px; /* Fixed width for 4 buttons per line */
     }
-    .hidden {
-      display: none;
+    /* Prevent hiding controls via CSS */
+    video::-webkit-media-controls, video::-moz-media-controls {
+      display: block;
     }
   </style>
 </head>
