--- a/Index.html
+++ b/Index.html
@@ -6,61 +6,47 @@
   <title>Simple Video Page</title>
   <style>
     body {
-      background-image: url('https://source.unsplash.com/1600x900/?movie,cinema'); /* Dynamic background image */
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
+      background-color: white;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       margin: 0;
-      color: white;
-      font-family: 'Arial', sans-serif;
     }
     video {
-      max-width: 80%;
-      max-height: 80%;
-      margin-bottom: 30px; /* Increased space between videos */
-      border: 5px solid rgba(255, 255, 255, 0.8); /* Add border for video frames */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
-      border-radius: 10px; /* Rounded corners */
-      display: block;
-      width: 100%; /* Ensure full width of the container */
+      max-width: 90%;
+      max-height: 90%;
+      margin-bottom: 30px; /* Added extra space */
     }
     .buttons-container {
       display: flex;
       flex-wrap: wrap;
-      gap: 15px; /* More spacing between buttons */
+      gap: 10px;
       justify-content: center;
-      margin-bottom: 30px;
+      margin-bottom: 20px;
     }
     .buttons-container button {
-      padding: 12px 18px;
+      padding: 8px 12px;
       border: none;
       border-radius: 5px;
-      background-color: rgba(0, 123, 255, 0.8); /* Slightly darker blue */
+      background-color: #007bff;
       color: white;
-      font-size: 14px;
+      font-size: 12px;
       cursor: pointer;
-      transition: background-color 0.3s ease-in-out, transform 0.2s ease-in-out;
     }
     .buttons-container button:hover {
-      background-color: rgba(0, 85, 180, 0.9); /* Darker blue on hover */
-      transform: scale(1.05); /* Slight scale effect for hover */
+      background-color: #0056b3;
     }
     .video-title {
-      font-size: 22px;
+      font-size: 18px;
       font-weight: bold;
-      margin-bottom: 20px;
-      text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5); /* Shadow to make titles pop */
+      margin-bottom: 10px;
     }
     .redone-buttons-container {
       width: 400px; /* Fixed width for 4 buttons per line */
     }
-    /* Prevent hiding controls via CSS */
-    video::-webkit-media-controls, video::-moz-media-controls {
-      display: block;
+    .hidden {
+      display: none;
     }
   </style>
 </head>
@@ -93,7 +79,7 @@
   <!-- Third video (The Paris Under) -->
   <div class="hidden">
     <div class="video-title">The Paris Under</div>
-    <video controls>
+    <video id="theparisunderVideo" controls>
       <source src="Theparisunder.mp4" type="video/webm">
       Your browser does not support the video tag.
     </video>
@@ -191,6 +177,9 @@
         moanaVideo.play();
       }
     });
+
+    // For The Paris Under video
+    const theparisunderVideo = document.getElementById('theparisunderVideo');
   </script>
 </body>
 </html>
