--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
   <title>Simple Video Page</title>
   <style>
     body {
-      background-image: url('https://source.unsplash.com/1600x900/?nature,water'); /* Background image from Unsplash */
+      background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)), url('https://source.unsplash.com/1600x900/?nature,water'); /* Background with gradient and image */
       background-size: cover; /* Ensure the image covers the entire viewport */
       background-position: center; /* Center the background image */
       background-repeat: no-repeat; /* Prevent repeating the image */
@@ -15,7 +15,7 @@
       justify-content: center;
       align-items: center;
       margin: 0;
-      color: white; /* Make the text visible on top of the background */
+      color: white; /* Ensure text contrast against background */
     }
     video {
       max-width: 90%;
