--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,10 @@
       color: white; /* Ensure text contrast against background */
     }
     video {
-      max-width: 90%;
+      max-width: 100%; /* Ensure videos take up full container width */
       max-height: 90%;
+      width: 100%; /* Ensure videos take up full container width */
+      height: auto; /* Maintain aspect ratio */
       margin-bottom: 30px; /* Added extra space */
     }
     .buttons-container {
